--- a/albania.html
+++ b/albania.html
@@ -1,158 +1,113 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Албания</title>
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyDRUoIzXpwwAGYM0qciAYdQm-wtMKqLsVs",
-  authDomain: "strani3.firebaseapp.com",
-  projectId: "strani3",
-  storageBucket: "strani3.firebasestorage.app",
-  messagingSenderId: "225168183800",
-  appId: "1:225168183800:web:825e782a35bccca89d460d",
-  measurementId: "G-3NKBET5R9J"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-
-const countryId = "albania";
-
-// Загрузка статистики
-async function loadStats() {
-  const ref = doc(db, "countries", countryId);
-  const snap = await getDoc(ref);
-
-  if (snap.exists()) {
-    const data = snap.data();
-    document.getElementById("money").textContent = data.money ?? 0;
-    document.getElementById("army").textContent = data.army ?? 0;
-    document.getElementById("income").textContent = data.income ?? 0;
-    document.getElementById("alliance").textContent = data.alliance ?? "нет";
-  } else {
-    await setDoc(ref, { money: 0, army: 0, income: 0, alliance: "нет" });
-    loadStats();
-  }
-}
-
-// Создать альянс
-async function createAlliance() {
-  const name = prompt("Введите название альянса:");
-  if (!name) return;
-
-  const ref = doc(db, "countries", countryId);
-  await updateDoc(ref, { alliance: name });
-  alert("Альянс создан: " + name);
-  loadStats();
-}
-
-// Выйти из альянса
-async function leaveAlliance() {
-  const ref = doc(db, "countries", countryId);
-  await updateDoc(ref, { alliance: "нет" });
-  alert("Вы вышли из альянса");
-  loadStats();
-}
-
-// Выкинуть страну из альянса
-async function kickFromAlliance() {
-  const target = prompt("Введите страну, которую хотите выгнать:");
-  if (!target) return;
-
-  const ref = doc(db, "countries", target);
-  const snap = await getDoc(ref);
-
-  if (snap.exists()) {
-    await updateDoc(ref, { alliance: "нет" });
-    alert("Страна " + target + " исключена из альянса");
-  } else {
-    alert("Такой страны нет в базе");
-  }
-}
-
-// Объявить войну
-async function declareWar() {
-  const enemy = prompt("Введите страну, которой хотите объявить войну:");
-  if (!enemy) return;
-
-  await addDoc(collection(db, "messages"), {
-    to: enemy,
-    from: countryId,
-    type: "war",
-    text: `Страна ${countryId} объявляет вам войну!`,
-    date: new Date().toISOString()
-  });
-
-  alert("Война объявлена стране: " + enemy);
-}
-
-// Загрузить почту
-async function loadMessages() {
-  const q = query(collection(db, "messages"), where("to", "==", countryId));
-  const snaps = await getDocs(q);
-
-  const box = document.getElementById("mail");
-  box.innerHTML = "<h3>Почта</h3>";
-
-  snaps.forEach(docSnap => {
-    const data = docSnap.data();
-    const div = document.createElement("div");
-    div.className = "mailItem";
-    div.textContent = `[${data.type}] ${data.text}`;
-    box.appendChild(div);
-  });
-}
-
-window.onload = () => {
-  loadStats();
-  loadMessages();
-
-  document.getElementById("btnAlliance").onclick = createAlliance;
-  document.getElementById("btnWar").onclick = declareWar;
-  document.getElementById("btnLeave").onclick = leaveAlliance;
-  document.getElementById("btnKick").onclick = kickFromAlliance;
-
-  // автообновление раз в 10 секунд
-  setInterval(() => {
-    loadStats();
-    loadMessages();
-  }, 10000);
-};
-</script>
-<style>
-body { background:#111; color:#eee; font-family:Arial; padding:20px; }
-h1 { text-align:center; }
-.stats { background:#2a2a2a; padding:15px; border-radius:10px; max-width:500px; margin:auto; }
-.stats div { margin:5px 0; }
-button { padding:8px 12px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; margin:5px; }
-button:hover { background:#45a049; }
-.mail { background:#222; margin-top:20px; padding:10px; border-radius:8px; max-width:500px; margin:auto; }
-.mailItem { background:#333; padding:8px; border-radius:5px; margin-bottom:6px; }
-</style>
+  <meta charset="UTF-8">
+  <title>Албания</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      text-align: center;
+    }
+    .country {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 30px auto;
+      width: 350px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+    h2 {
+      margin-top: 0;
+    }
+    button {
+      margin: 5px;
+      padding: 10px 15px;
+      border: none;
+      background: #3498db;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+    #log {
+      margin-top: 20px;
+      background: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      max-height: 200px;
+      overflow-y: auto;
+      font-size: 14px;
+      text-align: left;
+    }
+  </style>
 </head>
 <body>
-<h1>Албания</h1>
-<div class="stats">
-  <div>Деньги: <span id="money">00</span></div>
-  <div>Армия: <span id="army">00</span></div>
-  <div>Доход: <span id="income">00</span></div>
-  <div>Альянс: <span id="alliance">нет</span></div>
-</div>
 
-<div style="text-align:center; margin-top:15px;">
-  <button id="btnAlliance">Создать альянс</button>
-  <button id="btnLeave">Выйти из альянса</button>
-  <button id="btnKick">Выкинуть из альянса</button>
-  <button id="btnWar">Объявить войну</button>
-</div>
+  <div class="country" id="albania">
+    <h2>Албания</h2>
+    <p>Население: <span id="population-albania">2000000</span></p>
+    <p>Армия: <span id="army-albania">10</span></p>
+    <p>Деньги: <span id="money-albania">10</span></p>
 
-<div id="mail" class="mail">
-  <h3>Почта</h3>
-</div>
+    <button onclick="createAlliance('Албания')">Создать альянс</button>
+    <button onclick="declareWar('Албания')">Объявить войну</button>
+  </div>
+
+  <div id="log"><b>Журнал событий:</b><br></div>
+
+  <script>
+    // Данные страны
+    let countries = {
+      "Албания": {
+        army: 10,
+        money: 10,
+        population: 2000000,
+        alliance: null,
+        isLeader: false
+      }
+    };
+
+    // Обновление интерфейса
+    function updateUI(country) {
+      document.getElementById("army-" + country.toLowerCase()).innerText = countries[country].army;
+      document.getElementById("money-" + country.toLowerCase()).innerText = countries[country].money;
+      document.getElementById("population-" + country.toLowerCase()).innerText = countries[country].population;
+    }
+
+    // Создание альянса
+    function createAlliance(country) {
+      let name = prompt("Введите название альянса:");
+      if (name) {
+        countries[country].alliance = name;
+        countries[country].isLeader = true;
+        log(country + " создала альянс '" + name + "' и стала главой!");
+      }
+    }
+
+    // Объявление войны
+    function declareWar(country) {
+      log(country + " объявила войну!");
+    }
+
+    // Система налогов (каждую секунду)
+    setInterval(() => {
+      for (let country in countries) {
+        let income = Math.floor(countries[country].population / 100000); // доход от налогов
+        countries[country].money += income;
+        updateUI(country);
+      }
+    }, 1000);
+
+    // Журнал
+    function log(message) {
+      let logBox = document.getElementById("log");
+      logBox.innerHTML += message + "<br>";
+      logBox.scrollTop = logBox.scrollHeight;
+    }
+  </script>
+
 </body>
 </html>
