--- a/albania.html
+++ b/albania.html
@@ -3,111 +3,157 @@
 <head>
   <meta charset="UTF-8">
   <title>Албания</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      text-align: center;
-    }
-    .country {
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      margin: 30px auto;
-      width: 350px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    h2 {
-      margin-top: 0;
-    }
-    button {
-      margin: 5px;
-      padding: 10px 15px;
-      border: none;
-      background: #3498db;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #2980b9;
-    }
-    #log {
-      margin-top: 20px;
-      background: #fff;
-      padding: 10px;
-      border-radius: 8px;
-      max-height: 200px;
-      overflow-y: auto;
-      font-size: 14px;
-      text-align: left;
-    }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
+    .country { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
+    button { margin: 5px; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    button:hover { opacity: 0.8; }
+    #messages { margin-top: 20px; padding: 10px; background: #eee; border-radius: 8px; }
   </style>
 </head>
 <body>
-
-  <div class="country" id="albania">
+  <div class="country">
     <h2>Албания</h2>
-    <p>Население: <span id="population-albania">2000000</span></p>
-    <p>Армия: <span id="army-albania">10</span></p>
-    <p>Деньги: <span id="money-albania">10</span></p>
+    <p>Население: <span id="population">0</span></p>
+    <p>Армия: <span id="army">0</span></p>
+    <p>Золото: <span id="gold">0</span></p>
+    <p>Доход: <span id="income">0</span></p>
+    <p>Альянс: <span id="alliance">нет</span></p>
 
-    <button onclick="createAlliance('Албания')">Создать альянс</button>
-    <button onclick="declareWar('Албания')">Объявить войну</button>
+    <button onclick="createAlliance()">Создать альянс</button>
+    <button onclick="leaveAlliance()">Выйти из альянса</button>
+    <button onclick="declareWar()">Объявить войну</button>
   </div>
 
-  <div id="log"><b>Журнал событий:</b><br></div>
+  <div id="messages">
+    <h3>Сообщения</h3>
+    <ul id="messageList"></ul>
+  </div>
 
-  <script>
-    // Данные страны
-    let countries = {
-      "Албания": {
-        army: 10,
-        money: 10,
+<script type="module">
+  // 🔹 Подключение Firebase
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+  import { getDatabase, ref, set, get, update, onValue, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDRUoIzXpwwAGYM0qciAYdQm-wtMKqLsVs",
+    authDomain: "strani3.firebaseapp.com",
+    projectId: "strani3",
+    storageBucket: "strani3.firebasestorage.app",
+    messagingSenderId: "225168183800",
+    appId: "1:225168183800:web:825e782a35bccca89d460d",
+    measurementId: "G-3NKBET5R9J",
+    databaseURL: "https://strani3-default-rtdb.firebaseio.com/"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  const countryName = "Албания";
+
+  // 🔹 Первичная инициализация (если страны ещё нет в базе)
+  async function initCountry() {
+    const countryRef = ref(db, 'countries/' + countryName);
+    const snap = await get(countryRef);
+    if (!snap.exists()) {
+      set(countryRef, {
         population: 2000000,
-        alliance: null,
+        army: 10,
+        gold: 10,
+        income: 0,
+        alliance: "нет",
         isLeader: false
+      });
+    }
+  }
+
+  // 🔹 Обновление интерфейса
+  function updateUI(data) {
+    document.getElementById("population").innerText = data.population;
+    document.getElementById("army").innerText = data.army;
+    document.getElementById("gold").innerText = data.gold;
+    document.getElementById("income").innerText = data.income;
+    document.getElementById("alliance").innerText = data.alliance || "нет";
+  }
+
+  // 🔹 Подписка на обновления страны
+  function listenCountry() {
+    const countryRef = ref(db, 'countries/' + countryName);
+    onValue(countryRef, (snapshot) => {
+      if (snapshot.exists()) {
+        updateUI(snapshot.val());
       }
-    };
+    });
+  }
 
-    // Обновление интерфейса
-    function updateUI(country) {
-      document.getElementById("army-" + country.toLowerCase()).innerText = countries[country].army;
-      document.getElementById("money-" + country.toLowerCase()).innerText = countries[country].money;
-      document.getElementById("population-" + country.toLowerCase()).innerText = countries[country].population;
+  // 🔹 Создать альянс
+  function createAlliance() {
+    let name = prompt("Введите название альянса:");
+    if (name) {
+      update(ref(db, 'countries/' + countryName), {
+        alliance: name,
+        isLeader: true
+      });
+      addMessage(countryName + " создала альянс '" + name + "'");
     }
+  }
 
-    // Создание альянса
-    function createAlliance(country) {
-      let name = prompt("Введите название альянса:");
-      if (name) {
-        countries[country].alliance = name;
-        countries[country].isLeader = true;
-        log(country + " создала альянс '" + name + "' и стала главой!");
-      }
+  // 🔹 Выйти из альянса
+  function leaveAlliance() {
+    update(ref(db, 'countries/' + countryName), {
+      alliance: "нет",
+      isLeader: false
+    });
+    addMessage(countryName + " вышла из альянса");
+  }
+
+  // 🔹 Объявить войну
+  function declareWar() {
+    let enemy = prompt("Кому вы хотите объявить войну?");
+    if (enemy) {
+      addMessage(countryName + " объявила войну " + enemy);
+      // 📩 Отправляем письмо врагу
+      push(ref(db, 'messages/' + enemy), {
+        text: countryName + " объявляет вам войну! У вас есть день на подготовку.",
+        time: Date.now()
+      });
     }
+  }
 
-    // Объявление войны
-    function declareWar(country) {
-      log(country + " объявила войну!");
-    }
+  // 🔹 Добавить сообщение
+  function addMessage(text) {
+    const msgList = document.getElementById("messageList");
+    let li = document.createElement("li");
+    li.textContent = text;
+    msgList.appendChild(li);
 
-    // Система налогов (каждую секунду)
-    setInterval(() => {
-      for (let country in countries) {
-        let income = Math.floor(countries[country].population / 100000); // доход от налогов
-        countries[country].money += income;
-        updateUI(country);
-      }
-    }, 1000);
+    push(ref(db, 'messages/' + countryName), {
+      text: text,
+      time: Date.now()
+    });
+  }
 
-    // Журнал
-    function log(message) {
-      let logBox = document.getElementById("log");
-      logBox.innerHTML += message + "<br>";
-      logBox.scrollTop = logBox.scrollHeight;
-    }
-  </script>
+  // 🔹 Слушаем входящие письма
+  function listenMessages() {
+    const msgRef = ref(db, 'messages/' + countryName);
+    onValue(msgRef, (snapshot) => {
+      const msgList = document.getElementById("messageList");
+      msgList.innerHTML = "";
+      snapshot.forEach(child => {
+        let li = document.createElement("li");
+        li.textContent = child.val().text;
+        msgList.appendChild(li);
+      });
+    });
+  }
 
+  // 🔹 Запуск
+  initCountry().then(() => {
+    listenCountry();
+    listenMessages();
+  });
+</script>
 </body>
 </html>
