--- a/index.html
+++ b/index.html
@@ -1,120 +1,81 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Игра со странами и альянсами</title>
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyDRUoIzXpwwAGYM0qciAYdQm-wtMKqLsVs",
-  authDomain: "strani3.firebaseapp.com",
-  projectId: "strani3",
-  storageBucket: "strani3.firebasestorage.app",
-  messagingSenderId: "225168183800",
-  appId: "1:225168183800:web:825e782a35bccca89d460d",
-  measurementId: "G-3NKBET5R9J"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-
-// Страны
-const countries = [
-  "Албания","Андорра","Австрия","Беларусь","Бельгия","Болгария",
-  "Хорватия","Чехия","Дания","Эстония","Финляндия","Франция",
-  "Германия","Греция","Венгрия","Исландия","Ирландия","Италия",
-  "Латвия","Литва","Люксембург","Мальта","Молдавия","Монако",
-  "Черногория","Нидерланды","Северная Македония","Норвегия",
-  "Польша","Португалия"
-];
-
-const codes = {
-  "ALB123": "albania.html","AND456": "andorra.html","AUT789": "austria.html",
-  "BLR321": "belarus.html","BEL654": "belgium.html","BGR987": "bulgaria.html",
-  "HRV147": "croatia.html","CZE258": "czechia.html","DNK369": "denmark.html",
-  "EST741": "estonia.html","FIN852": "finland.html","FRA963": "france.html",
-  "GER159": "germany.html","GRC357": "greece.html","HUN753": "hungary.html",
-  "ISL951": "iceland.html","IRL147": "ireland.html","ITA258": "italy.html",
-  "LVA369": "latvia.html","LTU741": "lithuania.html","LUX852": "luxembourg.html",
-  "MLT963": "malta.html","MDA159": "moldova.html","MCO357": "monaco.html",
-  "MNE753": "montenegro.html","NLD951": "netherlands.html","MKD147": "northmacedonia.html",
-  "NOR258": "norway.html","POL369": "poland.html","PRT741": "portugal.html"
-};
-
-// Рендер списка стран
-function renderCountries() {
-  const list = document.getElementById("countryList");
-  countries.forEach(c => {
-    const div = document.createElement("div");
-    div.className = "country-card";
-    div.innerHTML = `<h2>${c}</h2><div class="status">– не занято</div>`;
-    list.appendChild(div);
-  });
-}
-
-// Переход по коду страны
-function goToCountry() {
-  const val = document.getElementById("codeInput").value.trim().toUpperCase();
-  if(!val){ alert("Введите код"); return; }
-  if(codes[val]){
-    window.location.href = codes[val];
-  } else {
-    alert("Код не найден");
-  }
-}
-
-// Загрузка существующих альянсов
-async function loadAlliances() {
-  const list = document.getElementById("alliances");
-  list.innerHTML = "";
-  const snapshot = await getDocs(collection(db, "alliances"));
-  snapshot.forEach(doc => {
-    const li = document.createElement("li");
-    li.textContent = doc.data().name;
-    list.appendChild(li);
-  });
-}
-
-window.onload = () => {
-  renderCountries();
-  loadAlliances();
-  document.getElementById("goBtn").onclick = goToCountry;
-};
-</script>
-<style>
-body { background:#111; color:#eee; font-family:Arial; padding:20px; }
-h1 { text-align:center; }
-.input-box { text-align:center; margin-bottom:20px; }
-input { padding:10px; border-radius:5px; border:none; width:200px; }
-button { padding:10px 15px; margin-left:10px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; }
-button:hover { background:#45a049; }
-.container { max-width:900px; margin:auto; }
-.country-list { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:15px; }
-.country-card { background:#2a2a2a; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5); }
-.country-card h2 { margin:0; }
-.status { color:#ccc; font-size:14px; }
-.alliances-section { margin-top:40px; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Сайт с кодами</title>
+  <link rel="stylesheet" href="style.css">
+  
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
 </head>
 <body>
-<h1>Игра со странами и альянсами</h1>
+  <div class="container">
+    <h1>🎁 Сайт с кодами</h1>
 
-<div class="input-box">
-  <input type="text" id="codeInput" placeholder="Введите код страны">
-  <button id="goBtn">Перейти</button>
-</div>
+    <div class="stats">
+      <p>💰 Деньги: <span id="money">0</span></p>
+      <p>⚔️ Армия: <span id="army">0</span></p>
+      <p>📈 Доход: <span id="income">0</span></p>
+    </div>
 
-<div class="container">
-  <h2>Список стран</h2>
-  <div class="country-list" id="countryList"></div>
-
-  <div class="alliances-section">
-    <h2>Существующие альянсы</h2>
-    <ul id="alliances"></ul>
+    <div class="input-box">
+      <input type="text" id="codeInput" placeholder="Введи код">
+      <button onclick="redeemCode()">Активировать</button>
+    </div>
+    <p id="message"></p>
   </div>
-</div>
+
+  <script>
+    // 🔥 Firebase config
+    const firebaseConfig = {
+      apiKey: "ТВОЙ_API_KEY",
+      authDomain: "ТВОЙ_DOMAIN.firebaseapp.com",
+      databaseURL: "https://ТВОЙ_DOMAIN.firebaseio.com",
+      projectId: "ТВОЙ_PROJECT_ID",
+      storageBucket: "ТВОЙ_BUCKET.appspot.com",
+      messagingSenderId: "ТВОЙ_SENDER_ID",
+      appId: "ТВОЙ_APP_ID"
+    };
+
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
+    const moneyEl = document.getElementById("money");
+    const armyEl = document.getElementById("army");
+    const incomeEl = document.getElementById("income");
+    const messageEl = document.getElementById("message");
+
+    // Загружаем ресурсы
+    db.ref("resources").on("value", snapshot => {
+      const data = snapshot.val();
+      moneyEl.textContent = data.money;
+      armyEl.textContent = data.army;
+      incomeEl.textContent = data.income;
+    });
+
+    // Активация кода
+    function redeemCode() {
+      const code = document.getElementById("codeInput").value.trim();
+      db.ref("codes/" + code).once("value").then(snapshot => {
+        if (snapshot.exists()) {
+          const reward = snapshot.val();
+          messageEl.textContent = "✅ Код активирован!";
+          // Добавляем ресурсы
+          db.ref("resources").once("value").then(r => {
+            const res = r.val();
+            db.ref("resources").set({
+              money: res.money + (reward.money || 0),
+              army: res.army + (reward.army || 0),
+              income: res.income + (reward.income || 0)
+            });
+          });
+        } else {
+          messageEl.textContent = "❌ Неверный код!";
+        }
+      });
+    }
+  </script>
 </body>
 </html>
