--- a/index.html
+++ b/index.html
@@ -2,39 +2,112 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сайт с кодами</title>
-  <link rel="stylesheet" href="style.css">
-  
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
+  <title>Выбор страны</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 30px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .countries {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+      margin: 20px 0;
+    }
+    .country-card {
+      width: 150px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #e0e0e0;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .country-card:hover {
+      background: #c9c9c9;
+    }
+    .free-slot {
+      text-align: center;
+      font-weight: bold;
+      color: red;
+      margin-top: 10px;
+    }
+    input, button {
+      padding: 8px;
+      margin-top: 10px;
+      border-radius: 6px;
+      border: 1px solid #aaa;
+    }
+    button {
+      background: #4CAF50;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      padding: 8px;
+      margin: 5px 0;
+      background: #eaeaea;
+      border-radius: 6px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>🎁 Сайт с кодами</h1>
+    <h1>Выбор страны</h1>
 
-    <div class="stats">
-      <p>💰 Деньги: <span id="money">0</span></p>
-      <p>⚔️ Армия: <span id="army">0</span></p>
-      <p>📈 Доход: <span id="income">0</span></p>
-    </div>
+    <h2>Войти по коду</h2>
+    <input type="text" id="codeInput" placeholder="Введите код страны">
+    <button onclick="login()">Войти</button>
 
-    <div class="input-box">
-      <input type="text" id="codeInput" placeholder="Введи код">
-      <button onclick="redeemCode()">Активировать</button>
+    <h2>Страны</h2>
+    <div class="countries">
+      <div class="country-card" onclick="loginCountry('LT123')">Литва</div>
+      <div class="country-card" onclick="loginCountry('AL123')">Албания</div>
     </div>
-    <p id="message"></p>
+    <div class="free-slot">Не занято (код: FREE1)</div>
+
+    <h2>Альянсы</h2>
+    <ul id="alliancesList">
+      <li>Загрузка...</li>
+    </ul>
   </div>
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+
   <script>
-    // 🔥 Firebase config
+    // ⚡ ТВОИ ДАННЫЕ Firebase сюда
     const firebaseConfig = {
       apiKey: "ТВОЙ_API_KEY",
-      authDomain: "ТВОЙ_DOMAIN.firebaseapp.com",
-      databaseURL: "https://ТВОЙ_DOMAIN.firebaseio.com",
+      authDomain: "ТВОЙ_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://ТВОЙ_PROJECT_ID.firebaseio.com",
       projectId: "ТВОЙ_PROJECT_ID",
-      storageBucket: "ТВОЙ_BUCKET.appspot.com",
+      storageBucket: "ТВОЙ_PROJECT_ID.appspot.com",
       messagingSenderId: "ТВОЙ_SENDER_ID",
       appId: "ТВОЙ_APP_ID"
     };
@@ -42,39 +115,34 @@
     const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    const moneyEl = document.getElementById("money");
-    const armyEl = document.getElementById("army");
-    const incomeEl = document.getElementById("income");
-    const messageEl = document.getElementById("message");
-
-    // Загружаем ресурсы
-    db.ref("resources").on("value", snapshot => {
-      const data = snapshot.val();
-      moneyEl.textContent = data.money;
-      armyEl.textContent = data.army;
-      incomeEl.textContent = data.income;
+    // Загружаем альянсы
+    const alliancesRef = db.ref("alliances");
+    alliancesRef.on("value", (snapshot) => {
+      const list = document.getElementById("alliancesList");
+      list.innerHTML = "";
+      snapshot.forEach(child => {
+        const li = document.createElement("li");
+        li.textContent = child.val().name;
+        list.appendChild(li);
+      });
     });
 
-    // Активация кода
-    function redeemCode() {
-      const code = document.getElementById("codeInput").value.trim();
-      db.ref("codes/" + code).once("value").then(snapshot => {
-        if (snapshot.exists()) {
-          const reward = snapshot.val();
-          messageEl.textContent = "✅ Код активирован!";
-          // Добавляем ресурсы
-          db.ref("resources").once("value").then(r => {
-            const res = r.val();
-            db.ref("resources").set({
-              money: res.money + (reward.money || 0),
-              army: res.army + (reward.army || 0),
-              income: res.income + (reward.income || 0)
-            });
-          });
-        } else {
-          messageEl.textContent = "❌ Неверный код!";
-        }
-      });
+    // Вход по коду
+    function login() {
+      const code = document.getElementById("codeInput").value;
+      loginCountry(code);
+    }
+
+    function loginCountry(code) {
+      if (code === "LT123") {
+        window.location.href = "lithuania.html";
+      } else if (code === "AL123") {
+        window.location.href = "albania.html";
+      } else if (code === "FREE1") {
+        alert("Эта страна пока свободна!");
+      } else {
+        alert("Неверный код!");
+      }
     }
   </script>
 </body>
