--- a/index.html
+++ b/index.html
@@ -1,149 +1,120 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Выбор страны</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 1000px;
-      margin: 30px auto;
-      padding: 20px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    .countries {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      margin: 20px 0;
-    }
-    .country-card {
-      width: 150px;
-      height: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #e0e0e0;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .country-card:hover {
-      background: #c9c9c9;
-    }
-    .free-slot {
-      text-align: center;
-      font-weight: bold;
-      color: red;
-      margin-top: 10px;
-    }
-    input, button {
-      padding: 8px;
-      margin-top: 10px;
-      border-radius: 6px;
-      border: 1px solid #aaa;
-    }
-    button {
-      background: #4CAF50;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    li {
-      padding: 8px;
-      margin: 5px 0;
-      background: #eaeaea;
-      border-radius: 6px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Игра со странами и альянсами</title>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyDRUoIzXpwwAGYM0qciAYdQm-wtMKqLsVs",
+  authDomain: "strani3.firebaseapp.com",
+  projectId: "strani3",
+  storageBucket: "strani3.firebasestorage.app",
+  messagingSenderId: "225168183800",
+  appId: "1:225168183800:web:825e782a35bccca89d460d",
+  measurementId: "G-3NKBET5R9J"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+// Страны
+const countries = [
+  "Албания","Андорра","Австрия","Беларусь","Бельгия","Болгария",
+  "Хорватия","Чехия","Дания","Эстония","Финляндия","Франция",
+  "Германия","Греция","Венгрия","Исландия","Ирландия","Италия",
+  "Латвия","Литва","Люксембург","Мальта","Молдавия","Монако",
+  "Черногория","Нидерланды","Северная Македония","Норвегия",
+  "Польша","Португалия"
+];
+
+const codes = {
+  "ALB123": "albania.html","AND456": "andorra.html","AUT789": "austria.html",
+  "BLR321": "belarus.html","BEL654": "belgium.html","BGR987": "bulgaria.html",
+  "HRV147": "croatia.html","CZE258": "czechia.html","DNK369": "denmark.html",
+  "EST741": "estonia.html","FIN852": "finland.html","FRA963": "france.html",
+  "GER159": "germany.html","GRC357": "greece.html","HUN753": "hungary.html",
+  "ISL951": "iceland.html","IRL147": "ireland.html","ITA258": "italy.html",
+  "LVA369": "latvia.html","LTU741": "lithuania.html","LUX852": "luxembourg.html",
+  "MLT963": "malta.html","MDA159": "moldova.html","MCO357": "monaco.html",
+  "MNE753": "montenegro.html","NLD951": "netherlands.html","MKD147": "northmacedonia.html",
+  "NOR258": "norway.html","POL369": "poland.html","PRT741": "portugal.html"
+};
+
+// Рендер списка стран
+function renderCountries() {
+  const list = document.getElementById("countryList");
+  countries.forEach(c => {
+    const div = document.createElement("div");
+    div.className = "country-card";
+    div.innerHTML = `<h2>${c}</h2><div class="status">– не занято</div>`;
+    list.appendChild(div);
+  });
+}
+
+// Переход по коду страны
+function goToCountry() {
+  const val = document.getElementById("codeInput").value.trim().toUpperCase();
+  if(!val){ alert("Введите код"); return; }
+  if(codes[val]){
+    window.location.href = codes[val];
+  } else {
+    alert("Код не найден");
+  }
+}
+
+// Загрузка существующих альянсов
+async function loadAlliances() {
+  const list = document.getElementById("alliances");
+  list.innerHTML = "";
+  const snapshot = await getDocs(collection(db, "alliances"));
+  snapshot.forEach(doc => {
+    const li = document.createElement("li");
+    li.textContent = doc.data().name;
+    list.appendChild(li);
+  });
+}
+
+window.onload = () => {
+  renderCountries();
+  loadAlliances();
+  document.getElementById("goBtn").onclick = goToCountry;
+};
+</script>
+<style>
+body { background:#111; color:#eee; font-family:Arial; padding:20px; }
+h1 { text-align:center; }
+.input-box { text-align:center; margin-bottom:20px; }
+input { padding:10px; border-radius:5px; border:none; width:200px; }
+button { padding:10px 15px; margin-left:10px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; }
+button:hover { background:#45a049; }
+.container { max-width:900px; margin:auto; }
+.country-list { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:15px; }
+.country-card { background:#2a2a2a; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5); }
+.country-card h2 { margin:0; }
+.status { color:#ccc; font-size:14px; }
+.alliances-section { margin-top:40px; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Выбор страны</h1>
+<h1>Игра со странами и альянсами</h1>
 
-    <h2>Войти по коду</h2>
-    <input type="text" id="codeInput" placeholder="Введите код страны">
-    <button onclick="login()">Войти</button>
+<div class="input-box">
+  <input type="text" id="codeInput" placeholder="Введите код страны">
+  <button id="goBtn">Перейти</button>
+</div>
 
-    <h2>Страны</h2>
-    <div class="countries">
-      <div class="country-card" onclick="loginCountry('LT123')">Литва</div>
-      <div class="country-card" onclick="loginCountry('AL123')">Албания</div>
-    </div>
-    <div class="free-slot">Не занято (код: FREE1)</div>
+<div class="container">
+  <h2>Список стран</h2>
+  <div class="country-list" id="countryList"></div>
 
-    <h2>Альянсы</h2>
-    <ul id="alliancesList">
-      <li>Загрузка...</li>
-    </ul>
+  <div class="alliances-section">
+    <h2>Существующие альянсы</h2>
+    <ul id="alliances"></ul>
   </div>
-
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-
-  <script>
-    // ⚡ ТВОИ ДАННЫЕ Firebase сюда
-    const firebaseConfig = {
-      apiKey: "ТВОЙ_API_KEY",
-      authDomain: "ТВОЙ_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://ТВОЙ_PROJECT_ID.firebaseio.com",
-      projectId: "ТВОЙ_PROJECT_ID",
-      storageBucket: "ТВОЙ_PROJECT_ID.appspot.com",
-      messagingSenderId: "ТВОЙ_SENDER_ID",
-      appId: "ТВОЙ_APP_ID"
-    };
-
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    // Загружаем альянсы
-    const alliancesRef = db.ref("alliances");
-    alliancesRef.on("value", (snapshot) => {
-      const list = document.getElementById("alliancesList");
-      list.innerHTML = "";
-      snapshot.forEach(child => {
-        const li = document.createElement("li");
-        li.textContent = child.val().name;
-        list.appendChild(li);
-      });
-    });
-
-    // Вход по коду
-    function login() {
-      const code = document.getElementById("codeInput").value;
-      loginCountry(code);
-    }
-
-    function loginCountry(code) {
-      if (code === "LT123") {
-        window.location.href = "lithuania.html";
-      } else if (code === "AL123") {
-        window.location.href = "albania.html";
-      } else if (code === "FREE1") {
-        alert("Эта страна пока свободна!");
-      } else {
-        alert("Неверный код!");
-      }
-    }
-  </script>
+</div>
 </body>
 </html>
