--- a/index.html
+++ b/index.html
@@ -23,12 +23,36 @@ const db = getFirestore(app);
 
 // Страны
 const countries = [
-  "Албания","Андорра","Австрия","Беларусь","Бельгия","Болгария",
-  "Хорватия","Чехия","Дания","Эстония","Финляндия","Франция",
-  "Германия","Греция","Венгрия","Исландия","Ирландия","Италия",
-  "Латвия","Литва","Люксембург","Мальта","Молдавия","Монако",
-  "Черногория","Нидерланды","Северная Македония","Норвегия",
-  "Польша","Португалия"
+  "Албания – не занято",
+  "Андорра – не занято", 
+  "Австрия – не занято",
+  "Беларусь – не занято",
+  "Бельгия – не занято",
+  "Болгария – не занято",
+  "Хорватия – не занято",
+  "Чехия – не занято",
+  "Дания – не занято",
+  "Эстония – не занято",
+  "Финляндия – не занято",
+  "Франция – не занято",
+  "Германия – не занято",
+  "Греция – не занято",
+  "Венгрия – не занято",
+  "Исландия – не занято",
+  "Ирландия – не занято",
+  "Италия – не занято",
+  "Латвия – не занято",
+  "Литва – не занято",
+  "Люксембург – не занято",
+  "Мальта – не занято",
+  "Молдавия – не занято",
+  "Монако – не занято",
+  "Черногория – не занято",
+  "Нидерланды – не занято",
+  "Северная Македония – не занято",
+  "Норвегия – не занято",
+  "Польша – не занято",
+  "Португалия – не занято"
 ];
 
 const codes = {
@@ -50,7 +74,7 @@ function renderCountries() {
   countries.forEach(c => {
     const div = document.createElement("div");
     div.className = "country-card";
-    div.innerHTML = `<h2>${c}</h2><div class="status">– не занято</div>`;
+    div.innerHTML = `<h2>${c}</h2>`;
     list.appendChild(div);
   });
 }
@@ -95,7 +119,6 @@ button:hover { background:#45a049; }
 .country-list { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:15px; }
 .country-card { background:#2a2a2a; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5); }
 .country-card h2 { margin:0; }
-.status { color:#ccc; font-size:14px; }
 .alliances-section { margin-top:40px; }
 </style>
 </head>
