--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ const countries = [
   "Андорра – не занято", 
   "Австрия – не занято",
   "Беларусь – не занято",
-  "Бельгия – не занято",
+  "Бельгия – Эля",
   "Болгария – не занято",
   "Хорватия – не занято",
   "Чехия – не занято",
