--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ const countries = [
   "Албания – не занято",
   "Андорра – не занято", 
   "Австрия – не занято",
-  "Беларусь – не занято",
-  "Бельгия – Эля",
+  "Беларусь – Эля",
+  "Бельгия – не занято",
   "Болгария – не занято",
   "Хорватия – не занято",
   "Чехия – не занято",
