--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@ const countries = [
   "Беларусь – Эля",
   "Бельгия – не занято",
   "Болгария – не занято",
-  "Хорватия – не занято",
+  "Хорватия – Вика Дру и Арина",
   "Чехия – не занято",
   "Дания – не занято",
   "Эстония – не занято",
-  "Финляндия – не занято",
-  "Франция – не занято",
-  "Германия – не занято",
-  "Греция – не занято",
+  "Финляндия – Лёша",
+  "Франция – Полина",
+  "Германия – Никита И.",
+  "Греция – Милана",
   "Венгрия – не занято",
   "Исландия – не занято",
   "Ирландия – не занято",
-  "Италия – не занято",
+  "Италия – Эвелина",
   "Латвия – не занято",
   "Литва – не занято",
-  "Люксембург – не занято",
+  "Люксембург – Карпович",
   "Мальта – не занято",
   "Молдавия – не занято",
-  "Монако – не занято",
+  "Монако – Катрина",
   "Черногория – не занято",
   "Нидерланды – не занято",
   "Северная Македония – не занято",
-  "Норвегия – не занято",
+  "Норвегия – Вероника",
   "Польша – не занято",
   "Португалия – не занято"
 ];
