--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ const countries = [
   "Австрия – не занято",
   "Беларусь – Эля",
   "Бельгия – не занято",
-  "Болгария – не занято",
+  "Болгария – Костя",
   "Хорватия – Вика Дру и Арина",
   "Чехия – не занято",
   "Дания – не занято",
