--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ const countries = [
   "Беларусь – Эля",
   "Бельгия – не занято",
   "Болгария – Костя",
-  "Хорватия – Вика Дру и Арина",
+  "Хорватия – Вика Дру",
   "Чехия – не занято",
   "Дания – не занято",
   "Эстония – не занято",
@@ -44,7 +44,7 @@ const countries = [
   "Латвия – не занято",
   "Литва – не занято",
   "Люксембург – Карпович",
-  "Мальта – не занято",
+  "Мальта – Арина",
   "Молдавия – не занято",
   "Монако – Катрина",
   "Черногория – не занято",
