--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ const countries = [
   "Мальта – Арина",
   "Молдавия – не занято",
   "Монако – Катрина",
-  "Черногория – не занято",
+  "Черногория – Кира",
   "Нидерланды – не занято",
   "Северная Македония – не занято",
   "Норвегия – Вероника",
-  "Польша – не занято",
+  "Польша – Даник",
   "Португалия – не занято"
 ];
 
