--- a/albania.html
+++ b/albania.html
@@ -411,7 +411,7 @@
     </div>
   </div>
   function goToMap() {
-    window.location.href = 'Albaniamap.html'; // замените на путь к вашей карте
+    window.location.href = 'map.html'; // замените на путь к вашей карте
 }
 
 
