Update Austria entry in countries list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ const db = getFirestore(app);
 const countries = [
   "Албания – не занято",
   "Андорра – не занято", 
-  "Австрия – не занято",
+  "Австрия – Коля",
   "Беларусь – Эля",
   "Бельгия – не занято",
   "Болгария – Костя",
