--- a/albania.html
+++ b/albania.html
@@ -395,7 +395,7 @@ function goToMap() {
     const firebaseConfig = {
       apiKey: "AIzaSyDRUoIzXpwwAGYM0qciAYdQm-wtMKqLsVs",
       authDomain: "strani3.firebaseapp.com",
-      databaseURL: "https://strani3-default-rtdb.europe-west1.firebasedatabase.app/",
+      databaseURL: "https://console.firebase.google.com/u/0/project/strani3/database/strani3-default-rtdb/data/~2F",
       projectId: "strani3",
       storageBucket: "strani3.firebasestorage.app",
       messagingSenderId: "225168183800",
