Change map link from map.html to Lmap.html

--- a/latvia.html
+++ b/latvia.html
@@ -372,7 +372,7 @@
     <button onclick="upgradePopulation()">Улучшить население (+100,000)</button>
     <button onclick="forceInitialize()">Принудительная инициализация</button>
     <button onclick="checkTimeSync()">Проверить синхронизацию</button>
-   <button onclick="window.location.href='map.html'">🗺️ На карту</button>
+   <button onclick="window.location.href='Lmap.html'">🗺️ На карту</button>
   </div>
 
   <div class="info-panels">
