Update country names in index.html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ const db = getFirestore(app);
 
 // Страны
 const countries = [
-  "Албания – не занято",
+  "Албания – Коля",
   "Андорра – не занято", 
-  "Австрия – Коля",
+  "Австрия – не занято",
   "Беларусь – Эля",
   "Бельгия – не занято",
   "Болгария – Костя",
