--- a/lithuania.html
+++ b/lithuania.html
@@ -605,7 +605,7 @@
           const initialData = {
             gold: 1000,
             army: 100,
-            population: 2800000,
+            population: 2794000, // Население Литвы
             chips: 50,
             oil: 200,
             food: 500,
